--- a/build_config.json
+++ b/build_config.json
@@ -1,10 +1,15 @@
 {
 	"name":"py_simple_readme",
 	"author":"Andrew Spangler",
-	"version":"0.0.0",
+	"version":"0.0.2",
 	"license":"GPLv3",
 	"email":"AndrewSpangler@users.noreply.github.com",
 	"description":"Quick, easy, navigatable readme generator",
 	"requirements":[],
-	"url":"https://github.com/AndrewSpangler/"
+	"url":"https://github.com/AndrewSpangler/",
+	"changelog": {
+		"0.0.2":"Add show_submodule argument to function/class documenter function",
+		"0.0.1":"Fix PyPi readme",
+		"0.0.0":"Push"
+	}
 }
